--- a/.github/workflows/subs-check.yml
+++ b/.github/workflows/subs-check.yml
@@ -2,7 +2,8 @@ name: Run subs-check
 
 on:
   schedule:
-    - cron: '0 0 * * *'  # 每天 UTC 时间午夜运行
+    - cron: '0 0 * * *'
+  workflow_dispatch:
 
 jobs:
   run-subs-check:
