--- a/config.yaml
+++ b/config.yaml
@@ -37,7 +37,7 @@ listen-port: ":8199"
 
 # 以节点IP查询位置重命名节点
 # 质量差的节点可能造成IP查询失败，造成整体检查速度稍微变慢，默认true
-rename-node: true
+rename-node: false
 
 # 节点前缀，依赖rename-node为true才生效
 node-prefix: ""
